# gfold

./: LICENSE  README.md  requirements.txt  sample-input.txt  setup.cfg
gfold/: __init__.py  gfold.py
