[metadata]
name = gfold
version = file: gfold/VERSION.txt
url = https://github.com/tos-kamiya/gfold
author = Toshihiro Kamiya
author_email = kamiya@mbj.nifty.com
license = Apache License
description = gfold: wrap lines with specified width
long_description = file: README.md

[options.package_data]
* = *.txt, *.md

[options.entry_points]
console_scripts =
    gfold = gfold:main

[options]
zip_safe = True
packages = find:
install_requires =
    grapheme
    wcwidth
    docopt
